--- a/react-with-ts/index.html
+++ b/react-with-ts/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/HLrCWW5S/Chat-GPT-Image-Apr-30-2025-01-55-18-PM-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Material Tailwind Dashboard React | By Creative Tim</title>
+    <title>Atsilepimo svetaine</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
